--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ p {
 
 /* home intro */
 .home-intro {
-    background: linear-gradient(rgba(3, 6, 28, 0.7), rgba(3, 6, 28, 0.9)), url("../images/image.png");
+    background: linear-gradient(rgba(3, 6, 28, 0.7), rgba(3, 6, 28, 0.9)), url("../image.png");
     background-position-x: 0%, 0%;
     background-position-y: 0%, 0%;
     background-attachment: scroll, scroll;
