--- a/style.css
+++ b/style.css
@@ -1,13 +1,5 @@
 /*
 
-Exroz - Constuction HTML Template
-Author : aStylers
-Author URL : https://themeforest.net/user/astylers
-
-*/
-
-/*
-
 Table of Content:
 - fonts
 - general
@@ -207,7 +199,7 @@ p {
 
 /* haader title */
 .header-title {
-    background: linear-gradient(rgba(2, 29, 56, 0.84), rgba(2, 29, 56, 0.98)), url("../header.jpg");
+    background: linear-gradient(rgba(2, 29, 56, 0.84), rgba(2, 29, 56, 0.98)), url("./header.jpg");
     background-position-x: 0%, 0%;
     background-position-y: 0%, 0%;
     background-attachment: scroll, scroll;
@@ -279,7 +271,7 @@ p {
 
 /* home intro */
 .home-intro {
-    background: linear-gradient(rgba(3, 6, 28, 0.7), rgba(3, 6, 28, 0.9)), url("../image.png");
+    background: linear-gradient(rgba(3, 6, 28, 0.7), rgba(3, 6, 28, 0.9)), url("./image.png");
     background-position-x: 0%, 0%;
     background-position-y: 0%, 0%;
     background-attachment: scroll, scroll;
